bpo-31113: Get rid of recursion in the compiler for normal control flow.